# mas_embedded_threadx

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore
.github/workflows/: auto-merge-dev.yml
.zed/: build.bat  flash.bat  settings.json  tasks.json
apps/: CMakeLists.txt  app_init.c  app_init.h  config.cmake  generate_headers.cmake  module_config.h.in  robot_def.h.in
apps/infantry3/: robot.cmake
apps/infantry3/single_board/gimbal_func/: gimbal_func.c
apps/infantry3/single_board/robot_func/: robot_func.c
apps/templates/: robot.cmake
apps/test/: robot.cmake  test_def.h
apps/test/single_board/: robot_control.c  robot_control.h
apps/test/single_board/chassis/: chassis.c  chassis.h
apps/test/single_board/gimbal/: gimbal.c  gimbal.h
apps/test/single_board/robot/: robot_fun.c  robot_fun.h
apps/test/single_board/robot_fun/: robot_fun.c
board/bsp/: CMakeLists.txt  bsp_def.h  bsp_init.c
board/bsp/BEEP/: bsp_beep.c  bsp_beep.h
board/bsp/CAN/: CAN.MD  bsp_can.c  bsp_can.h  bsp_can_internal.h  bsp_can_task.c  bsp_can_task.h
board/bsp/DWT/: DWT.MD  bsp_dwt.c  bsp_dwt.h
board/bsp/FLASH/: FLASH.MD  bsp_flash.c  bsp_flash.h
board/bsp/GPIO/: GPIO.MD  bsp_gpio.c  bsp_gpio.h
board/bsp/I2C/: I2C.MD  bsp_i2c.c  bsp_i2c.h
board/bsp/LED/: bsp_led.c  bsp_led.h
board/bsp/PWM/: PWM.MD  bsp_pwm.c  bsp_pwm.h
board/bsp/SPI/: SPI.MD  bsp_spi.c  bsp_spi.h
board/bsp/UART/: UART.MD  bsp_uart.c  bsp_uart.h
board/bsp/USB/: usb_config.h  usbd_cdc_acm_user.c  usbd_cdc_acm_user.h
board/damiao_h7/: .mxproject  CMakeLists.txt  STM32H723XG_FLASH.ld  base.ioc
board/damiao_h7/Core/Inc/: main.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h
board/damiao_h7/Core/Src/: adc.c  crc.c  dma.c  fdcan.c  gpio.c  iwdg.c  main.c  mdma.c  octospi.c  rng.c  spi.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c
board/damiao_h7/USB_DEVICE/App/: usbd_cdc_if.h
board/damiao_h7/cmake/stm32cubemx/: CMakeLists.txt
board/dji_c/: .mxproject  CMakeLists.txt  base.ioc
board/dji_c/Inc/: dac.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usbd_cdc_if.h  usbd_conf.h
board/dji_c/Src/: adc.c  dac.c  dma.c  gpio.c  i2c.c  iwdg.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c  usb_otg.c  usbd_conf.c
board/dji_c/cmake/stm32cubemx/: CMakeLists.txt
modules/: CMakeLists.txt  MODULES.MD  module_config.cmake  module_init.c  module_init.h
modules/BMI088/: BMI088.MD  BMI088_reg.h  module_bmi088.c  module_bmi088.h  module_bmi088_cali.c
modules/BOARDCOMM/: BOARDCOMM.MD  module_boardcomm.c  module_boardcomm.h
modules/INS/: INS.MD  QuaternionEKF.c  QuaternionEKF.h  kalman_filter.c  kalman_filter.h  module_ins.c  module_ins.h
modules/MOTOR/: MOTOR.MD  module_motor.c  module_motor.h  motor_base.c  motor_base.h  motor_def.h
modules/MOTOR/DAMIAO/: DAMIAO.MD  motor_damiao.c  motor_damiao.h
modules/MOTOR/DJI/: DJI.MD  motor_dji.c  motor_dji.h
modules/MOTOR/POWER_CONTROL/: power_control.c  power_control.h
modules/MOTOR/SERVO/: SERVO.MD  motor_servo.c  motor_servo.h
modules/MOTOR/ZDT_STEPMOTOR/: ZDT_STEPMOTOR.MD  motor_zdt.c  motor_zdt.h
modules/OFFLINE/: OFFLINE.MD  module_offline.c  module_offline.h
modules/REFEREE/: module_referee.c  module_referee.h  referee_protocol.h  referee_protocol_ui.c  referee_protocol_ui.h
modules/REMOTE/: REMOTE.MD  module_remote.c  module_remote.h
modules/REMOTE/DT7/: dt7.c  dt7.h
modules/REMOTE/SBUS/: sbus.c  sbus.h
modules/REMOTE/VT02/: vt02.c  vt02.h
modules/REMOTE/VT03/: vt03.c  vt03.h
modules/SuperCap/: module_supercap.c  module_supercap.h
modules/VISION/: module_vision.c  module_vision.h
modules/WT606/: module_wt606.c  module_wt606.h
modules/algorithm/: ALGORITHM_LQR.MD  ALGORITHM_PID.MD  crc_rm.c  crc_rm.h  lqr.c  lqr.h  pid.c  pid.h  user_lib.c  user_lib.h
modules/template/: README.md  module_template.c  module_template.h
robot/: CMakeLists.txt  robot_init.c
utils/: CMakeLists.txt
